Blog overflow fixed

--- a/home/static/css/blog.css
+++ b/home/static/css/blog.css
@@ -18,14 +18,16 @@ h4{
 }
 
 hr{
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    width: 95%;
+	border: 0;
+	height: 0;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+	width: 95%;
 }
 
 .first{
-	border-left: 10px solid rgba(142, 146, 153,0.4);
-	padding-left: 5px; 
+	padding-left: 5px;
+	word-wrap: break-word;
+	padding-top: 10px;
+	padding-bottom: 10px; 
 }
